# jotta-spanish

./: .env.example  .eslintrc.cjs  .gitignore  bun.lockb  deploy_modal.sh  drizzle.config.ts  foo.sh  next.config.mjs  package.json  test.sh  tsconfig.json
.github/workflows/: cd.yaml  ci.yaml  modal-deploy.yaml
.husky/: pre-commit
blog/2024-03-04/: testing-blog.md
blog/2024-04-03/: another-one.md  first-post.md
blogs/: going-llm-agnostic.mdx  hello-world.mdx  jotta-stack.mdx  jotta-v1.mdx  vocabulary-first-learning.mdx
ingest/: dev.ipynb  spanish.csv
python/: README.md  foo.py  litellm.ipynb  pyproject.toml  router.py
python/deployments/embedding/: main.py  stub.py
python/deployments/example/: main.py
python/deployments/spacy/: stub.py
python/dev/chat/: stub.py
src/: env.js  middleware.ts
src/app/: chat-analysis.tsx  icon.tsx  layout.tsx  page.tsx
src/app/(internal)/: layout.tsx
src/app/_components/: favicon.tsx
src/app/api/chat/: route.ts
src/app/blog/: layout.tsx  page.tsx
src/app/blog/[slug]/: page.tsx
src/app/blog/_components/: dumb-switch.tsx
src/app/playground/: page.tsx
src/app/spanish/: page.tsx
src/components/ai/: llm-playground.tsx
src/components/openai/: key-dialog.tsx  key-provider.tsx
src/components/theme/: toggle.tsx
src/components/ui/: pagination.tsx
src/lib/: blog.ts  config.ts  modelPrices.ts
src/lib/ai/: llms.ts
src/lib/python_client/: models.ts  schemas.ts  services.ts  zod_schema.ts
src/server/: auth.ts
src/server/api/: root.ts  trpc.ts
src/server/db/: schema.ts
src/styles/: globals.css
(+19 files in other folders)
