[tool.poetry]
name = "jotta"
version = "0.1.0"
description = ""
authors = ["Patrick Frenett <patrick@frenett.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.35.1"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
modal = "^0.62.58"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
